Fix overflow issue in type ahead search view
[Fixes #26511015]

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -66,6 +66,11 @@ $header-item-spacing: 2*$padding-x;
         line-height: 16px;
         vertical-align: middle;
 
+        .container {
+            width: 100%;
+            @include ellipsis;
+        }
+
         ul li {
             position: relative;
             padding: 2px 10px;
